--- a/pages/guide/guide.html
+++ b/pages/guide/guide.html
@@ -88,6 +88,8 @@
           Puis je vous expliquerais dans les rubrique suivante qu'est ce que sont les packages et comment les telecharger.
           Treve de blabla passons au tutoriel.
         </p>
+
+        <p>Ce guide a une approche pour debutant, afin que tout le monde puisse bien demarer sur Atom</p>
       </section>
 
       <section id="installation">
