--- a/pages/guide/utilisation.html
+++ b/pages/guide/utilisation.html
@@ -129,7 +129,7 @@
           vous pouvez appuyer sur "push" en bas a droite, qui va effectuer les changements sur le dépot GitHub.
         </p>
         <p>
-          Vous pouvez egalement fetch au meme endroit s'il y a eut des modifications sur votre dépot
+          Vous pouvez également "fetch" au même endroit que "push", pour synchroniser votre projet au dépot GitHub, si jamais il y a eut des modifications.
         </p>
 
       </section>
