--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
     <main class="content">
       <div class="banner">
-        <img id="jpg" src="./images/200x300/atom-banner-1.jpg" alt="">
+        <img id="jpeg" src="./images/200x300/atom-banner-1.jpeg" alt="">
         <img id="gif" src="./images/200x300/atom-banner-2.gif" alt="">
         <img id="png" src="./images/200x300/atom-banner-3.png" alt="">
       </div>
