--- a/pages/makingOf/consignes.html
+++ b/pages/makingOf/consignes.html
@@ -94,9 +94,9 @@
           Le poids de chaque image ne dépassera pas 60ko.<br>
           Les images doivent être libres de droits et non-pixélisées.
           <ul>
-            <li><a href="#">png</a></li>
-            <li><a href="#">jpeg</a></li>
-            <li><a href="#">gif</a></li>
+            <li><a href="../../index.html#png">png</a></li>
+            <li><a href="../../index.html#jpeg">jpeg</a></li>
+            <li><a href="../../index.html#gif">gif</a></li>
           </ul>
         </li>
         <li>Vous placerez un logo dans une taille de 145 pixels de large par 52 pixels de haut dans l'en-tête du site à côté du titre.</li>
