correc final de l'acceuil

--- a/pages/guide/guide.html
+++ b/pages/guide/guide.html
@@ -80,25 +80,18 @@
 
     <main class="content">
       <section id="presentation">
-        <h3>Bienvenu dans ce tutoriel pour pouvoir utiliser pleinement toute les fonctionnalités d'atom</h3>
+        <h2>Présentation</h2>
 
-        <p>Bonjour jeune developpeur (ou peut-etre developpeur hautement experimenté, je ne vous connais pas).
-          Si vous êtes venu jusqu'ici, c'est bien que cette editeur de texte a retenu votre attention!
-          Je vais donc vous expliquer a present comment obtenir cette application!
-          Puis je vous expliquerais dans les rubrique suivante qu'est ce que sont les packages et comment les telecharger.
-          Treve de blabla passons au tutoriel.
-        </p>
+        <p>Cette section du site est un tutoriel d'installation, et d'utilisation de l'éditeur,
+          visant à donner rapidement les bases aux débutants souhaitant utiliser Atom pour travailler sur leurs projets.</p>
 
-        <p>Ce guide a une approche pour debutant, afin que tout le monde puisse bien demarer sur Atom</p>
-      </section>
-
-      <section id="installation">
-        <p></p>
+        <p>Ce guide est destiné aux débutants,
+          mais il requiert tout de même une compréhension moindre de l'informatique.</p>
       </section>
 
       <nav id="nav-bottom">
         <a class="max" href="#"><i class="fas fa-chevron-left"></i></a>
-        <a class="max" href="utilisation.html"><i class="fas fa-chevron-right"></i></a>
+        <a class="max" href="#"><i class="fas fa-chevron-right"></i></a>
       </nav>
     </main>
 
