--- a/pages/guide/installation.html
+++ b/pages/guide/installation.html
@@ -96,7 +96,7 @@
       <section id="config">
         <h2>Configuration</h2>
         <p>Les parametres sont accessible en appuyant simmultanement sur les touches "Ctrl" + ",".
-          Il est égalemment accessible depuis le menu du haut File > settings pour Windows ou depuis Edit > preférences pour Linux.</p>
+          Il est égalemment accessible depuis le menu du haut "File > Settings" pour Windows ou depuis "Edit > Preferences" pour Linux.</p>
         <p>Une fois arrivé sur cette fenêttre vous aurez des options qui s'afficherons devant vous</p>
         <p>Je vais en souligner quelque une que je trouve digne d'interet:</p>
 
