--- a/pages/guide/packages.html
+++ b/pages/guide/packages.html
@@ -93,7 +93,7 @@
 
       <section id="recommendation">
         <h2>Recommendation</h2>
-        <p>Dans cette section, je vous recommenderait quelques packages que je trouve bon à avoir sous la main.</p>
+        <p>Dans cette section, je vous recommenderais quelques packages que je trouve bon à avoir.</p>
         <ul>
           <li> <a href="https://atom.io/packages/script">Script</a>
             <p>Qui premet d'executer vos scripts confortablement depuis l'éditeur.
@@ -111,13 +111,21 @@
             <p>Pour voir ses erreurs de synthaxe et autres s'afficher de maniere dynamique dans l'éditeur.</p>
           </li>
           <li> <a href="https://atom.io/packages/color-picker">Color Picker</a>
-            <p>Pour choisir une couleur de maniere simple et avoir accès au differents codes de celles-ci (rgb, hexadecimal, ...)</p>
+            <p>Pour choisir une couleur de maniere simple et
+              avoir accès au differents codes de celles-ci (rgb, hexadecimal...)</p>
           </li>
           <li> <a href="https://atom.io/packages/teletype">Teletype</a>
-            <p>Pour travaililler a plusieurs sur un document.</p>
+            <p>Pour travailler à plusieurs sur un même fichier.</p>
           </li>
           <li> <a href="https://atom.io/packages/ask-stack">Ask Stack</a>
             <p>Pour rapidement avoir accès au forum de <a href="https://stackoverflow.com/">Stack Overflow</a> depuis l'éditeur</p>
+          </li>
+
+          <li> <a href="https://atom.io/packages/autocomplete-plus">AutoComplete-plus</a>
+            <p>
+              Qui permet d'ajouter manuelement des suggestions qui pourra vous proposer par la suite,
+            plutôt que de retapper 200 fois la meme chose.
+          </p>
           </li>
 
           <li> <a href="https://atom.io/packages/pigments">Pigments</a>
@@ -126,6 +134,10 @@
 
           <li> <a href="https://atom.io/packages/atom-live-server">Atom Live Server</a>
             <p>Pour générer un serveur http local.</p>
+          </li>
+
+          <li> <a href="https://atom.io/packages/minimap">Minimap</a>
+            <p>Pour pouvoir naviguer sans s'y perdre lorsque l'on a en fasse de soit un script particulièrement long.</p>
           </li>
         </ul>
       </section>
