--- a/pages/guide/utilisation.html
+++ b/pages/guide/utilisation.html
@@ -85,17 +85,69 @@
         <h2>Utilisation général des fonctionnalité d'atom</h2>
         <h3>Les projets</h3>
         <p>
-          Vous pouvez ouvrir dans Atom un reperctoire de projet simplement en glissant le fichier sur Atom.
+          Vous pouvez ouvrir dans Atom un repertoire de projet simplement en glissant le fichier sur Atom.
           Vous pouvez également ouvrir le fichier en allant dans File > Open File et en selectionnant votre fichier pour ce qui aime se compliquer la vie.
           Atom vous mets également à votre disposition, la possibilité de reouvrir des projet deja ouvert, dans File > Reopen Project.
         </p>
 
+        <h3>Raccourcis</h3>
+        <p>Ceci est une petite liste non-exhaustive de tout les raccourcis de base qui pourrait
+          vous servir pour naviguer plus rapidement dans l'éditeur.
+        </p>
+        <ul>
+          <li>Sauvegarder: <strong>"Ctrl" + "s"</strong>
+            <p>Pour sauvegarder le fichier</p>
+          </li>
+
+          <li>Rechercher: <strong>"Ctrl" + "f"</strong>
+            <p>Pour rechercher un mot / une phrase dans le fichier courant.</p>
+          </li>
+
+          <li>La palette de commande: <strong>"Ctrl" + "Shift" + "p"</strong>
+            <p>Elle permet de trouver n'importe quelle fonctionnalités presentent dans Atom,
+              même ceux de package que vous avez installées.</p>
+          </li>
+          <li>Fuzzy file finder: <strong>"Ctrl" + "t"</strong>
+            <p>Pour rechercher rapidement un fichier dans le/les repertoire(s) ouverts.</p>
+          </li>
+
+          <li>Mettre en commentaire: "Ctrl"+"/"(celui du pavé numérique)
+            <p>Permet de mettre ou de retirer en commentaire la ligne ou la selection.</p>
+          </li>
+
+          <li>Dupliquer:  <strong>"Ctrl" + "Shift" + "d"</strong>
+            <p>Permet de dupliquer la ligne/selection.</p>
+          </li>
+
+          <li>Les curseurs multiple: <strong>"Ctrl" + Clique Gauche</strong>
+            <p>Pour ajouter un nouveau curseur dans l'éditeur.
+              Tous les curseur entrerons les saisies clavier en même temps.</p>
+          </li>
+          <li>Nouvelle onglets: <strong>"Ctrl" + "n"</strong>
+            <p>Pour ouvrir un nouveau fichier dans un nouvelle onglet</p>
+          </li>
+
+          <li>Nouvelle fenetre: <strong>"Ctrl" + "Shift" + "n"</strong>
+            <p>Ouvrir une nouvelle fenetre vierge
+            </p>
+          </li>
+
+        </ul>
+        <p>Vous pouvez bien entendu modifier le raccourci clavier à tout moment:
+          D'abord allez dans la rubrique "Shortcut" des parametres, puis cliquer sur l'icone de bloque note pour copier le code.
+          Une cela fait, il ne vous suffira plus que de cliquer sur "your keymap file".
+          Une fois la fenetre ouverte vous pouvez coller ce que vous avez copier,
+          et modifier a votre guise la combinaison de touches.
+        </p>
+
         <h3>Les thèmes</h3>
-        <p>Vous pouvez changer de themes en allant dans la rubrique thème des parametres.
+        <p>Vous pouvez changer de thèmes en allant dans la rubrique thème des parametres.
           Vous y trouverez quelque themes preinstaller, mais s'il ne sont pas a votre gout,
           vous pouvez toujours en télécharger de puis l'interface juste en bas
-          De la meme maniere que pour les packages.
+          De la même manière que pour les packages.
         </p>
+        <p>Vous pouvez aussi personnaliser le look de votre editeur vous même en cliquant sur "your stylesheet".
+        Le language est similaire au Css. <a href="https://flight-manual.atom.io/using-atom/sections/basic-customization/">plus d'information</a> </p>
       </section>
 
       <section id="git">
@@ -108,7 +160,7 @@
           (si vous n'avez pas de compte, vous pouvez en creer un sur <a href="https://github.com/">https://github.com/</a>)
           Puis une fois que cela est realisé, vous pourrez utiliser pleinement l'intégration Git dans vos prochain projet.
         </p>
-        <p>Lors que vous avez ouvert dans atom le reperctoire d'un de vos projet hebergé sur GitHub
+        <p>Lors que vous avez ouvert dans atom le repertoire d'un de vos projet hebergé sur GitHub
           (que vous pouvez telecharger en ouvrant un terminal dans le fichier dans lequel vous souhaiter installer le projet,
           et en tappant "git clone https://github.com/VotrePseudo/VotreProjet")
           vous pouvez ouvrir la fenetre Git, en appuyant sur le button eponnyme, en bas a droite de l'ecran.
