--- a/pages/makingOf/googleAnalitics.html
+++ b/pages/makingOf/googleAnalitics.html
@@ -18,7 +18,7 @@
       <h1>Making Of</h1>
       <ul>
         <li><a href="./consignes.html">Consignes</a><span></span></li>
-        <li class="selected"><a href="./googleAnalitics.html">Analyse Google</a><span></span></li>
+        <li class="selected"><a href="./googleAnalitics.html">Google Analytics</a><span></span></li>
       </ul>
       <span class="line"></span>
     </header>
