--- a/pages/pourAllerPlusLoin.html
+++ b/pages/pourAllerPlusLoin.html
@@ -69,7 +69,7 @@
     <main class="content">
 
       <div class="banner">
-        <img src="../images/200x300/atom-banner-1.jpg" alt="">
+        <img src="../images/200x300/atom-banner-1.jpeg" alt="">
         <img src="../images/200x300/atom-banner-2.gif" alt="">
         <img src="../images/200x300/atom-banner-3.png" alt="">
       </div>
@@ -78,6 +78,12 @@
         <h2>Liens utiles:</h2>
         <p>Des informations complementaires sont disponibles sur la documentation du <a href="https://atom.io/docs">site officiel d'Atom</a>
           ou sur le <a href="https://github.com/atom/atom"> Repository GitHub d'Atom</a> </p>
+
+        <h3>Vidéos pour bien débuter avec Atom:</h3>
+          <ul>
+            <li><a href="https://www.youtube.com/watch?v=kF02EIGI7P8">Premier pas avec Atom</a></li>
+            <li><a href="https://youtu.be/aiXNKHKWlmY">Conseil de packages</a></li>
+          </ul>
       </section>
 
       <h2>Références</h2>
@@ -88,10 +94,17 @@
             <a href="https://flight-manual.atom.io/">Manuel d'utilisation d'atom</a>
           </li>
           <li>
+            <a href="https://www.marknotes.fr/docs/docs/Development/Web/atom/Racourcis%20clavier.html">Raccourcis Clavier</a>
+          </li>
+          <li>
             <a href="https://fr.wikipedia.org/wiki/Atom_(%C3%A9diteur_de_texte)">Wikipedia</a>
+          </li>
+          <li>
+            <a href="https://www.youtube.com/watch?v=UYPgPyxwF28">Top 5 ajouts d'Atom</a>
           </li>
         </ul>
       </section>
+
       <section id="references">
         <h3>Ressources utilisé:</h3>
 
@@ -100,6 +113,11 @@
           <li> <a href="https://github.com/atom/atom">Banniere d'Illustration</a> </li>
         </ul>
       </section>
+
+      <footer>
+        <p>Ce site a été réalisé avec soin par Florian Auberval.</p>
+      </footer>
+
     </main>
 
 
