--- a/index.html
+++ b/index.html
@@ -86,28 +86,30 @@
         <h2>Présentation</h2>
         <h3>Qu'est-ce qu'Atom ?</h3>
         <p>Atom est un logiciel libre d’édition de texte (dit open source) développé par GitHub,
-          realisé avec Electron et Chromium et écrit en CoffeeScript.</p>
-        <p>Ce logiciel propose une intégration de Git (logiciel de gestion de projet),
+          réalisé avec Electron et Chromium et écrit en CoffeeScript.</p>
+        <p>Ce logiciel propose une intégration de <a href="https://git-scm.com/">Git</a> pour la gestion de projet,
           mais également l'ajout facile d'extensions pouvant être développées par tous.</p>
         <p>Écrit en Node.js, ces extensions, appelées "packages",
            permettent d'implémenter de nombreuses fonctionnalités au logiciel,
            notamment celle d'exécuter des scripts directement depuis l'éditeur,
-           ou celle de compléter , selon le langage de programmation utilisé et si on le souhaite, ce que l'on est en train d'écrire</p>
+           ou d'avoir une auto-completion plus en phase avec ce que l'utilisateur désire tapper.</p>
 
         <h3>Pourquoi Atom ?</h3>
-        <p>La question qui vient alors à l'esprit est effectivement : pourquoi utiliser Atom plutôt qu'un autre environnement de programmation?</p>
+        <p>La question qui vient alors à l'esprit est effectivement : pourquoi utiliser Atom,
+          simple éditeur de texte, plutôt qu'un autre environnement de programmation?</p>
         <p>En effet, plusieurs autres alternatives proposent des avantages certains, comme
           Visual Studio Code de Microsoft, Sublime Text ou encore TextMate (et bien d'autres).</p>
         <p>La réponse principale à cette question se trouve dans le degré de liberté de personnalisation offert.
-          Celui des éditeurs qui viennent d'être mentionnés sont généralement limité,
-          tandis qu'Atom fait une grande part de sa publicité
-          via la large marge de manœuvre qu'il offre (il prétend ainsi offrir,
-          selon ses propres mots, un "hackable editor")</p>
-        <p>On peut aussi citer, parmis les avantages directs que propose Atom :</p>
+          Celui des éditeurs qui viennent d'être mentionnés sont limité à un certain degré,
+          tandis qu'Atom fait une grande part de sa publicité sur le degré liberté qu'il offre
+          (il prétend ainsi offrir, selon ses propres mots, un éditeur de texte "hackable")</p>
+
+        <p>On peut aussi citer, parmi les avantages directs que propose Atom :</p>
         <ul>
-          <li>Un éditeur de text sobre :
-            <p>Puisqu'il arrive quasiment totalement vierge, l'utilisateur ne se perd pas dans les options nombreuses  et compliquées qu'on trouve usuellement dans les environnements de programmation (Eclipse, Visual Studio Community).</p>
-            <p>C'est à vous de le personnaliser, ce qui peut être vu comme un avantage ou comme un inconvenient par certains.</p>
+          <li>Un éditeur de texte sobre :
+            <p>Puisqu'il arrive quasiment totalement vierge, on ne se perds plus dans les options interminables et
+              compliquées qu'on trouve usuellement dans les environnements de programmation (Eclipse, Visual Studio Community...).</p>
+            <p>C'est à vous de le personnaliser, ce qui peut être vu comme un avantage ou comme un inconvénient par certains.</p>
           </li>
 
           <li>Une communauté active et dévouée :
@@ -117,24 +119,28 @@
             </p>
           </li>
 
-          <li>Un control de Git intégré :
-            <p>On ne saurait parler d'Atom sans mentionner son interface d'intégration de Git très avancé,
-            vous permettant de voir facilement et en détails chaque modification que vous avez apportée à vos scripts, avant de les placer dans votre répertoire GitHub.
-            L'interface est sobre mais très efficace, plus besoin de taper de commande dans la console, ce n'est que l'affaire de quelques clics.
+          <li>L'intégration Git :
+            <p>On ne saurait parler d'Atom sans mentionner la manière dont Git y est intégré,
+            Grâce à son interface sobre mais poussé, il permet de voir facilement et en détails chaque modification
+            que vous avez apportée à vos scripts,
+            avant de les placer dans votre dépôt GitHub.
+            </p>
+            <p>Plus besoin de tapper de lignes de commandes dans la console,
+            ce n'est plus que l'affaire de quelques clics!
             </p>
           </li>
         </ul>
 
         <h3>Un éditeur fait pour vous ?</h3>
         <p>Atom est, en résumé, un éditeur très basique,
-          mais qui propose pourtant plusieurs possibilités de personnalisation, c'est
-          pourquoi il peut être recommandé à toutes personnes désirant un haut degré de liberté dans
+          mais qui propose pourtant une très grande liberté au niveau de sa personnalisation, c'est
+          pourquoi il peut être recommandé à toute personne désirant un haut degré de liberté dans
           l'agencement de leur éditeur, et qui n'ont pas peur de passer un peu de temps à choisir
-          quelles extensions ils souhaitent lui ajouter.</p>
+          quelles extensions ils souhaitent ajouter.</p>
 
-        <p>Il convient également aux débutants souhaitant faire leurs débuts dans le codage
+        <p>Il convient également aux débutants souhaitant faire leurs dents sur leurs premières lignes de code,
           sans avoir à appendre comment marche leurs environnement de travail (le logiciel étant extrêmement intuitif), mais également
-          au programmeur plus confirmé, souhaitant avoir un éditeur capable d'accomplir des tâches plus spécifique</p>
+          au programmeur plus confirmé, souhaitant avoir un éditeur capable d'accomplir des tâches plus spécifiques.</p>
 
       </section>
 
