--- a/pages/makingOf/consignes.html
+++ b/pages/makingOf/consignes.html
@@ -18,7 +18,7 @@
       <h1>Making Of</h1>
       <ul>
         <li class="selected"><a href="./consignes.html">Consignes</a><span></span></li>
-        <li><a href="./googleAnalitics.html">Analyse Google</a><span></span></li>
+        <li><a href="./googleAnalitics.html">Google Analytics</a><span></span></li>
       </ul>
       <span class="line"></span>
     </header>
@@ -77,7 +77,7 @@
       <ul>
         <li>Le site contiendra au moins 4 pages l'accueil
           <a href="../../index.html">A</a>, deux pages <a href="../guide/guide.html">B</a> et <a href="../pourAllerPlusLoin.html">C</a>,
-          et <a href="../guide/installation.html">D</a> fils de <a href="../guide/guide.html">B</a>.
+          et <a href="../guide/utilisation.html">D</a> fils de <a href="../guide/guide.html">B</a>.
         </li>
         <li>Votre <a href="../../index.html#problem">problématique</a> de traitement du sujet (brève introduction qui résume le contenu devotre site)</li>
         <li>Vos sources principales d'information, on précisera en particulier <a href="../pourAllerPlusLoin.html#sources">leur URL précise</a></li>
