--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <link rel="stylesheet" href="./styles/stylesheet.css">
     <link rel="stylesheet" href="./styles/style-header.css">
     <link rel="stylesheet" href="./styles/style-nav.css">
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-161182937-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-161182937-1');
+    </script>
 
     <script src="https://kit.fontawesome.com/da84674338.js" crossorigin="anonymous"></script>
     <script src='./scripts/search.js' ></script>
