--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="./styles/stylesheet.css">
     <link rel="stylesheet" href="./styles/style-header.css">
     <link rel="stylesheet" href="./styles/style-nav.css">
-
+    <link rel="icon" href="./images/icons/favicon.png" type="image/png" />
+    <link rel="shortcut icon" href="./images/icons/favicon.png" type="image/png" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-161182937-1"></script>
     <script>
@@ -16,7 +17,6 @@
 
       gtag('config', 'UA-161182937-1');
     </script>
-
 
     <script src="https://kit.fontawesome.com/da84674338.js" crossorigin="anonymous"></script>
     <script src='./scripts/search.js' ></script>
