--- a/pages/makingOf/googleAnalitics.html
+++ b/pages/makingOf/googleAnalitics.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="../../styles/stylesheet.css">
     <link rel="stylesheet" href="../../styles/style-header.css">
     <link rel="stylesheet" href="../../styles/style-nav.css">
-
+    <link rel="icon" href="../../images/icons/favicon.png" type="image/png" />
+    <link rel="shortcut icon" href="../../images/icons/favicon.png" type="image/png" />
     <script src="https://kit.fontawesome.com/da84674338.js" crossorigin="anonymous"></script>
     <script src='../../scripts/search.js' ></script>
     <script src='../../scripts/showVisibleSections.js' ></script>
