--- a/pages/model.html
+++ b/pages/model.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="../styles/stylesheet.css">
     <link rel="stylesheet" href="../styles/style-header.css">
     <link rel="stylesheet" href="../styles/style-nav.css">
-
+    <link rel="icon" href="../images/icons/favicon.png" type="image/png" />
+    <link rel="shortcut icon" href="../images/icons/favicon.png" type="image/png" />
     <script src="https://kit.fontawesome.com/da84674338.js" crossorigin="anonymous"></script>
     <script src='../scripts/search.js' ></script>
     <script src='../scripts/showVisibleSections.js' ></script>
@@ -79,7 +80,7 @@
       <h2>QU'EST CE QU'ATOM</h2>
 
       <div class="banner">
-        <img src="../images/200x300/atom-banner-1.jpg" alt="">
+        <img src="../images/200x300/atom-banner-1.jpeg" alt="">
         <img src="../images/200x300/atom-banner-2.gif" alt="">
         <img src="../images/200x300/atom-banner-3.png" alt="">
       </div>
