correc redac utilisation

--- a/pages/guide/guide.html
+++ b/pages/guide/guide.html
@@ -86,8 +86,8 @@
         <p>Cette section du site est un tutoriel d'installation, et d'utilisation de l'éditeur,
           visant à donner rapidement les bases aux débutants souhaitant utiliser Atom pour travailler sur leurs projets.</p>
 
-        <p>Ce guide est destiné aux débutants,
-          mais il requiert tout de même une compréhension moindre de l'informatique.</p>
+        <p>Ce guide est destiné aux débutants.
+          Aucune connaissance de l'informatique n'est requise pour la compréhension de ce guide.</p>
       </section>
 
       <nav id="nav-bottom">
