--- a/pages/guide/installation.html
+++ b/pages/guide/installation.html
@@ -88,29 +88,32 @@
     <main class="content">
       <section id="download">
         <h2>Téléchargement</h2>
-        <p>Tout d'abord vous pouvez télécharger Atom sur Windows, Mac os et Linux sur le <a href="https://atom.io/">site officiel</a>. </p>
-        <p>L'installation se résume a appuyer sur suivant, suivant, suivant et accepter les thermes d'utilisation de l’éditeur.</p>
-        <p>Il vous sera proposez d'agreer a l'envoie des données telemetrique,
-          Je vous conseil simplement de fermer toute ces pages inutiles</p>
+        <p>Atom est disponible en téléchargement pour Windows, macOS et Linux via le <a href="https://atom.io/">site officiel</a>. </p>
+        <p>L'installation se resume à ouvrir l'exécutable téléchargée. <a href="https://www.youtube.com/watch?v=Y6PoRK0yBLg">Démonstration</a> </p>
+        <p>Il vous sera proposé d'agréer à l'envoi des données télémétriques,
+          que vous pouvez choisir d'accepter ou de refuser.
+          Je vous conseille simplement de fermer tous ces onglets inutiles,
+          pour plus de simplicité dans la suite du tutoriel.</p>
 
       </section>
       <section id="config">
         <h2>Configuration</h2>
-        <p>Les parametres sont accessible en appuyant simmultanement sur les touches "Ctrl" + ",".
-          Il est égalemment accessible depuis le menu du haut "File > Settings" pour Windows ou depuis "Edit > Preferences" pour Linux.</p>
-        <p>Une fois arrivé sur cette fenêttre vous aurez des options qui s'afficherons devant vous</p>
-        <p>Je vais en souligner quelque une que je trouve digne d'interet:</p>
+        <p>Les paramètres sont accessibles en appuyant simultanément sur les touches "Ctrl" et ",".
+          Il est également accessible depuis le menu du haut File > Settings pour Windows ou depuis Edit > Preferences pour Linux.</p>
+
+        <p>Une fois arrivé sur cette fenêtre vous aurez des options qui s'afficheront devant vous.
+          Je vais en souligner quelques une qui me semble intérêssant d'activer.</p>
 
         <ul>
           <li>Auto Hide Menu Bar
-            <p>Simplement parce que cela peut etre quelque peux distrayant d'avoir une bande blanche au dessus de ce que l'on code
-              (ne vous inquietez pas il sera toujours accessible en appuyant sur Alt)</p>
+            <p>Simplement parce que cela peut être quelque peu distrayant d'avoir une bande blanche au-dessus de ce que l'on code
+              (ne vous inquiétez pas, le menu sera toujours accessible en appuyant sur Alt)</p>
           </li>
           <li>Restore Previous Window On Start
             <p>Pour un retour rapide au travail.</p>
           </li>
         </ul>
-        <p>Pour le reste je vous laisse dessider par vous meme de ce que vous voulez.</p>
+        <p>Pour le reste je vous laisse décider par vous-même de ce que vous voulez.</p>
       </section>
 
       <nav id="nav-bottom">
