--- a/pages/guide/packages.html
+++ b/pages/guide/packages.html
@@ -87,8 +87,8 @@
         <p>
           Les packages sont des extensions développées par la communauté
           fournissant une grande variété de fonctionnalité à Atom.
-          Développées en Node.js, ils sont facilement installable depuis la rubrique installation des parametres ("Ctrl" + ","),
-          mais une fois installées, accessible et configurable depuis la rubrique packages des parametres.
+          Développées en Node.js, ils sont facilement installables depuis la rubrique installation des paramètres ("Ctrl" + ","),
+          mais une fois installées, accessible et configurable depuis la rubrique packages des paramètres.
         </p>
       </section>
 
