--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </li>
 
             <li>
-              <a href="pages/guide/package.html">Les Packages</a>
+              <a href="pages/guide/packages.html">Les Packages</a>
               <ul class="tertiary">
                 <li><a href="#definition">Qu'est ce qu'un Package</a></li>
                 <li><a href="#recommendation">Recommendation</a></li>
