ajout d'un style pour aside

--- a/pages/guide/utilisation.html
+++ b/pages/guide/utilisation.html
@@ -189,14 +189,17 @@
           Et même fusionner des branches entre elles.
 
         </p>
+        
+        <aside>
         <h3>Pourquoi me diriez-vous?</h3>
-        <p>
-          Et bien cela prend sens pour les personnes travaillant sur de gros projets, comme pour certaines applications.
-          De cette manière un développeur peut corriger de son côté un certain bug, sans affecter toute la branche principale
-          qui pourrait servir de distribution pour cette application hypothétique.
-          Cette fonctionnalité peut aussi s'avérer très pratique lorsque l'on travaille en groupe sur le même projet.
-        </p>
-        <h3>--------------------------------------------------------</h3>
+          <p>
+            Et bien cela prend sens pour les personnes travaillant sur de gros projets, comme pour certaines applications.
+            De cette manière un développeur peut corriger de son côté un certain bug, sans affecter toute la branche principale
+            qui pourrait servir de distribution pour cette application hypothétique.
+            Cette fonctionnalité peut aussi s'avérer très pratique lorsque l'on travaille en groupe sur le même projet.
+          </p>
+
+        </aside>
         <p>
           Une fois que vous êtes prêt à valider vos changements, donc après avoir appuyé sur "Commit to master",
           vous pouvez cliquer sur "push" en bas à droite, qui va effectuer les changements sur le dépôt GitHub.
