--- a/pages/guide/packages.html
+++ b/pages/guide/packages.html
@@ -87,14 +87,14 @@
         <p>
           Les packages sont des extensions développées par la communauté
           fournissant une grande variété de fonctionnalité à Atom.
-          Développées en Node.js, ils sont facilement installables depuis la rubrique installation des paramètres ("Ctrl" + ","),
-          mais une fois installées, accessible et configurable depuis la rubrique packages des paramètres.
+          Développées en Node.js, ils sont facilement installables depuis la rubrique installation des paramètres,
+          mais une fois installés, ils sont accessibles et configurables depuis leur rubrique dédiée: "packages" des paramètres.
         </p>
       </section>
 
       <section id="recommendation">
         <h2>Recommendation</h2>
-        <p>Dans cette section, je vous recommenderais quelques packages que je trouve bon à avoir.</p>
+        <p>Dans cette section, je vous conseillerais quelques packages que je trouve utiles.</p>
         <ul>
           <li> <a href="https://atom.io/packages/script">Script</a>
             <p>Qui premet d'executer vos scripts confortablement depuis l'éditeur.
